src/objects/CKW_Follow_Up_Info__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CKW Follow Up Info</relationshipLabel>
        <relationshipName>Coordinators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficulties__c</fullName>
        <label>Difficulties</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Goal__c</fullName>
        <label>Follow Up Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Solución de errores de Aplicación GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solución de fallas técnicas de equipos móviles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realizar seguimiento al LP dentro del proyecto Cafeteros Conectados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socialización con el LP de Temas dentro del proyecto Cafeteros Conectados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socialización con la comunidad de Temas dentro del proyecto Cafeteros Conectados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompañamiento en actividades y/o visitas del LP a productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Requested_By__c</fullName>
        <label>Follow Up Requested By</label>
        <picklist>
            <picklistValues>
                <fullName>Citada por el LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citada por el Coordinador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewed_CKW__c</fullName>
        <label>Interviewed CKW</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CKW Follow Up Info</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Result__c</fullName>
        <label>Meeting Result</label>
        <picklist>
            <picklistValues>
                <fullName>Fue una reunión exitosa y el LP se encuentra en total capacidad de trabajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se encontró un error de Nivel 1 y fue solucionado por el Coordinador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se encontró un error de Nivel 2 y fue debidamente reportado al Equipo Técnico GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fue una visita de seguimeinto/apoyo y se verificó el buen funcionamiento del equipo móvil, las herramientas GF y del LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se encontraron dificultades para el buen funcionamiento del LP (zonas de dificil acceso, orden público, transpote, otros)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Follow_Up_Result__c</fullName>
        <label>Other Follow Up Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Goal__c</fullName>
        <label>Other Goal</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_Of_Contact__c</fullName>
        <label>Other Type Of Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Contact__c</fullName>
        <label>Type Of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Visita a LP en Finca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visita LP a Oficina Coocafisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encuentro con LP sitio alternativo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefónica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CKW Follow Up Info</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Nombre de CKW Follow Up Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CKW Follow Up Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>